Make initial game layout
Construct basic data structures and draw html markup

--- a/web-ui/app.html
+++ b/web-ui/app.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Lights ON!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
     <script src="app.js"></script>
